Modified Tooltip scss to prevent overflow, replaced projects edit and delete buttons to make the overall design more consistent across the projects and view project page

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -80,6 +80,7 @@ button {
   transform: translateX(-50%);
   z-index: 100;
   width: min-content !important;
+  text-align: center;
 
   font-size: 0.75rem;
   line-height: 1.1rem;
